tests/negative/PragmasFormat.juvix
module PragmasFormat;

open import Stdlib.Prelude;

{-# inline: Tre #-}
main : Nat;
main := 0;
